--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">A Home Within</string>
     <string name="action_settings">Settings</string>
+
+    <string name="your_library">Your Library</string>
+    <string name="training_and_tools">Training And Tools</string>
+    <string name="services">Services</string>
+    <string name="learn_more">Learn More</string>
+    <string name="account">Account</string>
+    <string name="about_us">About Us</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 </resources>
