--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,20 @@
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="forget_password">Forgot Your Password?</string>
+    <string name="create_new_account">Join Now Free</string>
+    <string name="no_account">No Account?</string>
+    <string name="hint_user_name">Please type user name</string>
+    <string name="hint_password">Please type password</string>
+    <string name="hint_phone">Please add your phone number</string>
+    <string name="hint_email">Please add your email address</string>
+    <string name="reset_password">Please enter your email</string>
+    <string name="or">Or</string>
+    <string name="reset_email_hint">Email</string>
+    <string name="hint_reset_phone">Phone</string>
+    <string name="reset">Reset</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="your_profile">User Profile</string>
 
     <string name="subscribe_title">Subscribe to Newsletter</string>
     <string name="recommendations_title">Recommendations</string>
