--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="permission_required_toast">Permission Required</string>
     <string name="permission_rationale_location">Why we need your location...</string>
     <string name="start_chat">Start Chat</string>
+    <string name="events">Events</string>
+    <string name="library">Library</string>
 
 </resources>
