--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="start_chat">Start Chat</string>
     <string name="events">Events</string>
     <string name="library">Library</string>
+    <string name="recommended">Recommended</string>
 
 </resources>
