[ahomewithin] Parse client done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="recommendations_title">Recommendations</string>
     <string name="pro_bono_title">Pro-Bono Therapists near you</string>
     <string name="events_title">Upcoming Events</string>
+    <string name="hint_desp">describe yourself !</string>
 
 </resources>
