Cool drawer and login flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,16 +10,17 @@
     <string name="about_us">About Us</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="home">Home</string>
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="forget_password">Forgot Your Password?</string>
     <string name="create_new_account">Join Now Free</string>
     <string name="no_account">No Account?</string>
-    <string name="hint_user_name">Please type user name</string>
-    <string name="hint_password">Please type password</string>
-    <string name="hint_phone">Please add your phone number</string>
-    <string name="hint_email">Please add your email address</string>
+    <string name="hint_user_name">User name</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_phone">Phone number</string>
+    <string name="hint_email">Email address</string>
     <string name="reset_password">Please enter your email</string>
     <string name="or">Or</string>
     <string name="reset_email_hint">Email</string>
