--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="training_and_tools">Training And Tools</string>
     <string name="services">Services</string>
     <string name="learn_more">Learn More</string>
+    <string name="video">Video</string>
     <string name="account">Account</string>
     <string name="about_us">About Us</string>
     <string name="login">Login</string>
