--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="profile_me">My Profile</string>
     <string name="community">Community</string>
     <string name="service_provider">Service Provider</string>
+    <string name="chat">chat</string>
 </resources>
