--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">A Home Within</string>
     <string name="action_settings">Settings</string>
 
-    <string name="your_library">Your Library</string>
+    <string name="your_library">My Library</string>
     <string name="training_and_tools">Training And Tools</string>
     <string name="services">Services</string>
     <string name="learn_more">Learn More</string>
@@ -41,7 +41,7 @@
     <string name="permission_rationale_location">Why we need your location...</string>
     <string name="start_chat">Start Chat</string>
     <string name="events">Events</string>
-    <string name="library">Library</string>
+    <string name="library">My Library</string>
     <string name="recommended">Recommended</string>
     <string name="type">type</string>
     <string name="thumbnail">Thumbnail</string>
