--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="community">Community</string>
     <string name="service_provider">Service Provider</string>
     <string name="chat">chat</string>
+    <string name="chat_now">Chat now...</string>
 </resources>
