Tiny modifications for looking better

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,6 @@
     <string name="profile_me">My Profile</string>
     <string name="community">Community</string>
     <string name="service_provider">Service Provider</string>
-    <string name="chat">chat</string>
+    <string name="chat">Chat</string>
     <string name="chat_now">Chat now...</string>
 </resources>
