--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="start_chat">Start Chat</string>
     <string name="events">Events</string>
     <string name="library">My Library</string>
+    <string name="near_you">Near you</string>
     <string name="recommended">Recommended</string>
     <string name="type">type</string>
     <string name="thumbnail">Thumbnail</string>
