--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="chat">Chat</string>
     <string name="chat_now">Chat now...</string>
     <string name="chatRoom">Chat With Someone</string>
-    <string name="chatting">chatting</string>
+    <string name="chatting">Chatting</string>
     <string name="no_data_available">Oops, it looks like you don\'t have any item in your library yet. Go to tools and trainings to see what resources are available!</string>
     <string name="even_transition">event_image_transition</string>
 </resources>
