Error entering in fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="about_us">About Us</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="profile">My profile</string>
     <string name="home">Home</string>
     <string name="test">Home</string>
 
